fix: smooth scroll on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1391,8 +1391,9 @@ header .navbar .burger-menu input[type=checkbox]:checked ~ .icon_burger-bottom {
     transform: translateY(-20px);
   }
 }
-body {
+body.price {
   overflow-x: hidden;
+  max-width: 100vw;
 }
 
 /* === HERO === */
@@ -1608,21 +1609,21 @@ body {
 }
 .pricing_promote .promote_cards {
   display: flex;
-  margin: 5rem auto;
+  margin: 5rem auto 0;
+  overflow-x: hidden;
+  padding: 0 0 3rem 3rem;
 }
 .pricing_promote .promote_card {
   min-width: 350px;
-  height: 500px;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
   border-radius: 2rem;
   padding: 2rem;
 }
+.pricing_promote .promote_card img {
+  width: 5rem;
+}
 .pricing_promote .promote_card:not(:last-child) {
   margin-right: 2rem;
-}
-
-main {
-  margin-bottom: 6rem;
 }
 
 .full-page {
