--- a/scss/_tarifs.scss
+++ b/scss/_tarifs.scss
@@ -1,5 +1,9 @@
-body {
+body.price {
     overflow-x: hidden;
+    max-width: 100vw;
+    // main {
+    //     margin-bottom: 6rem;
+    // }
 }
 
 /* === HERO === */
@@ -209,11 +213,16 @@ body {
     .promote {
         &_cards {
             display: flex;
-            margin: 5rem auto;
+            margin: 5rem auto 0;
+            overflow-x: hidden;
+            padding: 0 0 3rem 3rem;
         }
         &_card {
+            img {
+                width: 5rem;
+            }
             min-width: 350px;
-            height: 500px;
+            // height: 500px;
             box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
             border-radius: 2rem;
             padding: 2rem;
@@ -222,8 +231,4 @@ body {
             }
         }
     }
-}
-
-main {
-    margin-bottom: 6rem;
 }
